feat(39): one request for getting all restaurants and menus for date